--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head><link rel="stylesheet" href="style.css"></head>
   <body>
-    <h1>Hai</h1>
-    <h3>I'm Alimad Corp</h3>
-    <h3>This is a website for bobadrops</h3>
-    <img src="https://i.ibb.co/d0zQBb4F/images-1.jpg">
+    <h1>Hai</h1><br>
+    <h3>I'm Alimad Corp</h3><br>
+    <h3>This is a website for bobadrops</h3><br>
+    <img src="https://i.ibb.co/d0zQBb4F/images-1.jpg"><br>
     <a href="https://alimad.co">Visit my main website</a>
   </body>
 </html>
